package im.tox.tox4j.av.proto;

option optimize_for = LITE_RUNTIME;


message Call {
    required int32  friendNumber     = 1;
    required bool   audioEnabled     = 2;
    required bool   videoEnabled     = 3;
}

message CallState {
    required uint32  friendNumber     = 1;
    required uint32  state            = 2;
}

message ReceiveAudioFrame {
    required uint32  friendNumber     = 1;
    repeated int32   pcm              = 2 [packed = true];
    required uint32  channels         = 3;
    required uint32  samplingRate     = 4;
}

message ReceiveVideoFrame {
    required uint32  friendNumber     = 1;
    required uint32  width            = 2;
    required uint32  height           = 3;
    required bytes   y                = 4;
    required bytes   u                = 5;
    required bytes   v                = 6;
}


message AvEvents {
    repeated Call                   call                = 1;
    repeated CallState              callState           = 2;
    repeated ReceiveAudioFrame      receiveAudioFrame   = 3;
    repeated ReceiveVideoFrame      receiveVideoFrame   = 4;
}
